--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "express": "^4.17.2"
   },
   "devDependencies": {
+    "eslint": "^8.5.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-unicorn": "^39.0.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1"
   }
