--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "api": "node api",
     "api-dev": "nodemon api",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "lint": "eslint . && prettier --check ."
   },
   "dependencies": {
     "express": "^4.17.2"
