:heavy_plus_sign: Move handler to external package

--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "api": "node api",
+    "api": "node api NODE_ENV=production",
     "api-dev": "nodemon api",
     "format": "prettier --write .",
     "lint": "eslint . && prettier --check ."
   },
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "express-response-timestamp": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^8.5.0",
